--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,11 @@ environment:
   sdk: ^3.6.0
 
 dependencies:
+  connectivity_plus: ^6.1.3
   cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
+  http: ^1.3.0
   path_provider: ^2.1.5
   provider: ^6.1.2
   shared_preferences: ^2.5.2
